Support all available landscape orientations

--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -103,7 +103,7 @@
         <activity
             android:name=".GL2JNIActivity"
             android:configChanges="orientation|screenSize|screenLayout|uiMode|keyboard|keyboardHidden"
-            android:screenOrientation="landscape"
+            android:screenOrientation="sensorLandscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <meta-data
                 android:name="android.app.lib_name"
@@ -112,7 +112,7 @@
         <activity
             android:name=".GL2JNINative"
             android:configChanges="orientation|screenSize|screenLayout|uiMode|keyboard|keyboardHidden"
-            android:screenOrientation="landscape"
+            android:screenOrientation="sensorLandscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <meta-data
                 android:name="android.app.lib_name"
@@ -137,7 +137,7 @@
         <activity
             android:name=".config.EditVJoyActivity"
             android:configChanges="orientation|screenSize|screenLayout|uiMode|keyboard|keyboardHidden"
-            android:screenOrientation="landscape"
+            android:screenOrientation="sensorLandscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
     </application>
 
