--- a/shell/reicast.vcxproj.filters
+++ b/shell/reicast.vcxproj.filters
@@ -411,6 +411,9 @@
     <ClCompile Include="..\core\rec-x86\rec_x86_ngen.cpp">
       <Filter>rec-x86</Filter>
     </ClCompile>
+    <ClCompile Include="rec_x64.cpp">
+      <Filter>rec-x64</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="hw">
@@ -535,6 +538,9 @@
     </Filter>
     <Filter Include="windows">
       <UniqueIdentifier>{5a7b63eb-8c03-46ac-b6e0-dfd3ade02f11}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="rec-x64">
+      <UniqueIdentifier>{f73263e9-dbe8-4a6f-8b73-335af8307551}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -914,6 +920,9 @@
     </None>
     <None Include="..\core\rec-x86\rec_lin86_asm.S">
       <Filter>rec-x86</Filter>
+    </None>
+    <None Include="rec_win64.asm">
+      <Filter>rec-x64</Filter>
     </None>
   </ItemGroup>
 </Project>
