--- a/shell/reicast.vcxproj.filters
+++ b/shell/reicast.vcxproj.filters
@@ -408,10 +408,10 @@
     <ClCompile Include="..\core\rec-x86\rec_x86_il.cpp">
       <Filter>rec-x86</Filter>
     </ClCompile>
-    <ClCompile Include="..\core\rec-x86\rec_x86_ngen.cpp">
+    <ClCompile Include="..\core\rec-x86\rec_x86_asm.cpp">
       <Filter>rec-x86</Filter>
     </ClCompile>
-    <ClCompile Include="rec_x64.cpp">
+    <ClCompile Include="..\core\rec-x64\rec_x64.cpp">
       <Filter>rec-x64</Filter>
     </ClCompile>
   </ItemGroup>
@@ -920,9 +920,6 @@
     </None>
     <None Include="..\core\rec-x86\rec_lin86_asm.S">
       <Filter>rec-x86</Filter>
-    </None>
-    <None Include="rec_win64.asm">
-      <Filter>rec-x64</Filter>
     </None>
   </ItemGroup>
 </Project>
