--- a/shell/nacl/Makefile
+++ b/shell/nacl/Makefile
@@ -7,7 +7,7 @@ include $(NACL_SDK_ROOT)/tools/common.mk
 LOCAL_PATH := $(call my-dir)
 NOT_ARM := 1
 CPP_REC := 1
-NO_REND := 1
+#NO_REND := 1
 
 
 RZDCY_SRC_DIR = ../../core
@@ -18,9 +18,10 @@ TARGET = reicast
 DEPS = nacl_io
 LIBS = ppapi_gles2 ppapi_cpp ppapi pthread nacl_io
 
-CFLAGS  =  -Wno-error -Wno-ignored-attributes 
+CFLAGS  = -Wno-error -Wno-ignored-attributes 
+CFLAGS += -O3 -fno-strict-aliasing -ffast-math
 CFLAGS += -I$(RZDCY_SRC_DIR) -I$(RZDCY_SRC_DIR)/deps
-CFLAGS += -D RELEASE -D TARGET_NO_JIT -D TARGET_NACL32 -DNO_REND
+CFLAGS += -D RELEASE -D TARGET_NO_JIT -D TARGET_NACL32 -DGLES
 CFLAGS += -D TARGET_NO_EXCEPTIONS -D TARGET_NO_NVMEM
 
 SOURCES = $(RZDCY_FILES) ../../core/nacl/nacl.cpp
