--- a/shell/emscripten/Makefile
+++ b/shell/emscripten/Makefile
@@ -2,8 +2,9 @@
 LOCAL_PATH := $(call my-dir)
 FOR_LINUX :=1
 NOT_ARM := 1
-NO_REC := 1
+#NO_REC := 1
 #NO_REND := 1
+CPP_REC := 1
 NO_NIXPROF := 1
 RZDCY_SRC_DIR = ../../core
 
@@ -24,6 +25,7 @@ ASFLAGS :=
 LDFLAGS	:= -Wl,-Map,$(notdir $@).map,--gc-sections -Wl,-O3 -Wl,--sort-common 
 
 
+CXXONLYFLAGS := -std=c++11
 CXXFLAGS := -O3  -D GLES -D RELEASE -c -D TARGET_EMSCRIPTEN -D TARGET_NO_REC -D TARGET_NO_NVMEM -D TARGET_NO_WEBUI -D TARGET_NO_THREADS -D TARGET_BOUNDED_EXECUTION -D TARGET_NO_EXCEPTIONS
 CXXFLAGS += -fno-strict-aliasing
 CXXFLAGS += -ffast-math
@@ -51,7 +53,7 @@ $(EXECUTABLE): $(OBJECTS)
 
 obj/%.build.obj : $(RZDCY_SRC_DIR)/%.cpp
 	mkdir -p $(dir $@)
-	$(CXX) $(EXTRAFLAGS) $(INCS) $(CXXFLAGS) $< -o $@
+	$(CXX) $(EXTRAFLAGS) $(INCS) $(CXXFLAGS) $(CXXONLYFLAGS) $< -o $@
 	
 obj/%.build.obj : $(RZDCY_SRC_DIR)/%.c
 	mkdir -p $(dir $@)
