--- a/shell/reicast.vcxproj
+++ b/shell/reicast.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="..\core\hw\maple\maple_if.cpp" />
     <ClCompile Include="..\core\hw\mem\_vmem.cpp" />
     <ClCompile Include="..\core\hw\naomi\naomi.cpp" />
+    <ClCompile Include="..\core\hw\naomi\naomi_cart.cpp" />
     <ClCompile Include="..\core\hw\pvr\drkPvr.cpp" />
     <ClCompile Include="..\core\hw\pvr\pvr_mem.cpp" />
     <ClCompile Include="..\core\hw\pvr\pvr_regs.cpp" />
@@ -260,6 +261,7 @@
     <ClInclude Include="..\core\hw\maple\maple_if.h" />
     <ClInclude Include="..\core\hw\mem\_vmem.h" />
     <ClInclude Include="..\core\hw\naomi\naomi.h" />
+    <ClInclude Include="..\core\hw\naomi\naomi_cart.h" />
     <ClInclude Include="..\core\hw\naomi\naomi_regs.h" />
     <ClInclude Include="..\core\hw\pvr\config.h" />
     <ClInclude Include="..\core\hw\pvr\drkPvr.h" />
