--- a/shell/reicast.vcxproj.filters
+++ b/shell/reicast.vcxproj.filters
@@ -426,6 +426,9 @@
     <ClCompile Include="..\core\hw\naomi\naomi_cart.cpp">
       <Filter>hw\naomi</Filter>
     </ClCompile>
+    <ClCompile Include="..\core\cfg\ini.cpp">
+      <Filter>cfg</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="hw">
@@ -939,6 +942,9 @@
     </ClInclude>
     <ClInclude Include="..\core\hw\naomi\naomi_cart.h">
       <Filter>hw\naomi</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\cfg\ini.h">
+      <Filter>cfg</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
