linux-dist/evdev: Introduce a more consistens button naming scheme

--- a/shell/linux/mappings/controller_gcwz.cfg
+++ b/shell/linux/mappings/controller_gcwz.cfg
@@ -10,7 +10,7 @@ btn_d = 0x0E
 btn_x = 0x2A
 btn_y = 0x39
 btn_start = 0x1C
-dpad_left = 0x69
-dpad_right = 0x6A
-dpad_up = 0x67
-dpad_down = 0x6C
+btn_dpad1_left = 0x69
+btn_dpad1_right = 0x6A
+btn_dpad1_up = 0x67
+btn_dpad1_down = 0x6C
