--- a/shell/linux/mappings/controller_xboxdrv.cfg
+++ b/shell/linux/mappings/controller_xboxdrv.cfg
@@ -17,5 +17,5 @@ axis_trigger_left = 0x0a
 axis_trigger_right = 0x09
 
 [compat]
-axis_dpad_x = 0x10
-axis_dpad_y = 0x11
+axis_dpad1_x = 0x10
+axis_dpad1_y = 0x11
