--- a/shell/linux/mappings/controller_generic.cfg
+++ b/shell/linux/mappings/controller_generic.cfg
@@ -11,10 +11,10 @@ btn_x = 0x133
 btn_y = 0x134
 btn_z = 0x135
 btn_start = 0x13b
-dpad_left = 0x220
-dpad_right = 0x221
-dpad_up = 0x222
-dpad_down = 0x223
+btn_dpad1_left = 0x220
+btn_dpad1_right = 0x221
+btn_dpad1_up = 0x222
+btn_dpad1_down = 0x223
 axis_x = 0x00
 axis_y = 0x01
 axis_trigger_left = 0x02
@@ -23,7 +23,7 @@ axis_trigger_right = 0x05
 [compat]
 btn_trigger_left = 0x136
 btn_trigger_right = 0x137
-axis_dpad_x = 0x10
-axis_dpad_y = 0x11
+axis_dpad1_x = 0x10
+axis_dpad1_y = 0x11
 axis_dpad2_x = 0x12
 axis_dpad2_y = 0x13
