--- a/shell/linux/mappings/controller_pandora.cfg
+++ b/shell/linux/mappings/controller_pandora.cfg
@@ -8,11 +8,11 @@ btn_b = 107
 btn_c = 57
 btn_x = 102
 btn_y = 104
-btn_start  = 56
-dpad_left  = 105
-dpad_right = 106
-dpad_up    = 103
-dpad_down  = 108
+btn_start = 56
+btn_dpad1_left  = 105
+btn_dpad1_right = 106
+btn_dpad1_up    = 103
+btn_dpad1_down  = 108
 
 [compat]
 btn_trigger_left = 54
