--- a/shell/linux/mappings/controller_xpad.cfg
+++ b/shell/linux/mappings/controller_xpad.cfg
@@ -11,15 +11,15 @@ btn_x = 0x133
 btn_y = 0x134
 btn_z = 0x13d
 btn_start = 0x13b
-dpad_left = 0x2c0
-dpad_right = 0x2c1
-dpad_up = 0x2c2
-dpad_down = 0x2c3
+btn_dpad1_left  = 0x2c0
+btn_dpad1_right = 0x2c1
+btn_dpad1_up    = 0x2c2
+btn_dpad1_down  = 0x2c3
 axis_x = 0x00
 axis_y = 0x01
 axis_trigger_left = 0x02
 axis_trigger_right = 0x05
 
 [compat]
-axis_dpad_x = 0x10
-axis_dpad_y = 0x11
+axis_dpad1_x = 0x10
+axis_dpad1_y = 0x11
