--- a/shell/linux/mappings/keyboard.cfg
+++ b/shell/linux/mappings/keyboard.cfg
@@ -11,10 +11,10 @@ btn_x = 45
 btn_y = 21
 btn_z = 44
 btn_start = 28
-dpad_left = 105
-dpad_right = 106
-dpad_up = 103
-dpad_down = 108
+btn_dpad1_left  = 105
+btn_dpad1_right = 106
+btn_dpad1_up    = 103
+btn_dpad1_down  = 108
 
 [compat]
 btn_trigger_left = 29
